# liaksej-tiny-cloud-backend

./: .coveragerc  .dockerignore  .example.env  .example.env.db  .gitignore  Dockerfile  README.md  docker-compose.server.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requests.http
.github/workflows/: main.yaml
authentication/: admin.py  serializers.py  urls.py  views.py
cloud/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
cloud/migrations/: 0001_initial.py  0002_remove_user_admin_remove_user_email_and_more.py  0003_alter_file_user.py  0004_alter_user_user.py  0005_remove_user_pass_to_store_user_path_to_store.py  0006_alter_file_file_path.py  0007_alter_file_public_url.py  0008_alter_file_date_downloaded.py  0009_alter_file_file_type.py
deploy_scripts/: deploy.sh
djangoProject/: settings.py  test_settings.py  urls.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py
tests/authentication/: conftest.py  test_api.py
tests/tests_authentication/: conftest.py  test_api.py  test_auth_api.py
tests/tests_cloud/: conftest.py  test_cloud_api.py  test_services.py
