[tool.poetry]
name = "liaksei-tiny-cloud-backend"
version = "0.1.0"
description = ""
authors = ["Liaksej <tarusov.liaksej@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
